--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -1,68 +1,86 @@
 <!DOCTYPE html>
 
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.google.com/specimen/Montserrat"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="https://fonts.google.com/specimen/Montserrat">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+    <title>Frontend Mentor | Product preview card component</title>
+  </head>
 
-  <title>Frontend Mentor | Product preview card component</title>
-</head>
+  <body>
+    <!--Main Div-->
+    <main class="container">
+      <!--Image Div-->
+      <picture class="image">
+        <source
+          media="(max-width: 600px)"
+          srcset="./images/image-product-mobile.jpg"
+        />
+        <img src="./images/image-product-desktop.jpg" alt="image-product" />
+      </picture>
+      <!--Text Div-->
+      <div class="text">
+        <!--Title-->
 
-<body>
+        <p class="top">PERFUME</p>
 
-  <!--Main Div-->
-  <div class="container">
+        <!--Big Text-->
 
-    <!--Image Div-->
-    <div class="image">
-      <img src="./images/image-product-desktop.jpg" alt="image-product">
-    </div>
+        <h1 class="big">Gabrielle Essence Eau De Parfum</h1>
 
-    <!--Text Div-->
-    <div class="text">
-      <!--Title-->
-      <div class="top">
-        PERFUME
+        <!--Description-->
+
+        <p class="description">
+          A floral, solar and voluptuous interpretation composed by Olivier
+          Polge, Perfumer-Creator for the House of CHANEL.
+        </p>
+
+        <!--Price-->
+        <div class="price">
+          <p class="now">$149.99</p>
+          <p class="strike">$169.99</p>
+        </div>
+        <!--Button-->
+        <div class="btn">
+          <button>
+            <svg width="15" height="16" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M14.383 10.388a2.397 2.397 0 0 0-1.518-2.222l1.494-5.593a.8.8 0 0 0-.144-.695.8.8 0 0 0-.631-.28H2.637L2.373.591A.8.8 0 0 0 1.598 0H0v1.598h.983l1.982 7.4a.8.8 0 0 0 .799.59h8.222a.8.8 0 0 1 0 1.599H1.598a.8.8 0 1 0 0 1.598h.943a2.397 2.397 0 1 0 4.507 0h1.885a2.397 2.397 0 1 0 4.331-.376 2.397 2.397 0 0 0 1.12-2.021ZM11.26 7.99H4.395L3.068 3.196h9.477L11.26 7.991Zm-6.465 6.392a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Zm6.393 0a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Z"
+                fill="#FFF"
+              />
+            </svg>
+            Add to Cart
+          </button>
+        </div>
       </div>
-      <!--Big Text-->
-      <div class="big">
-        Gabrielle Essence Eau De Parfum
-      </div>
-      <!--Description-->
-      <div class="description">
-        A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-        Perfumer-Creator for the House of CHANEL.
-      </div>
-      <!--Price-->
-      <div class="price">
-        <p class="now">$149.99</p>
-        <p class="strike">$169.99</p>
-      </div>
-      <!--Button-->
-      <div class="btn">
-        <button>
-          <svg width="15" height="16" xmlns="http://www.w3.org/2000/svg"><path d="M14.383 10.388a2.397 2.397 0 0 0-1.518-2.222l1.494-5.593a.8.8 0 0 0-.144-.695.8.8 0 0 0-.631-.28H2.637L2.373.591A.8.8 0 0 0 1.598 0H0v1.598h.983l1.982 7.4a.8.8 0 0 0 .799.59h8.222a.8.8 0 0 1 0 1.599H1.598a.8.8 0 1 0 0 1.598h.943a2.397 2.397 0 1 0 4.507 0h1.885a2.397 2.397 0 1 0 4.331-.376 2.397 2.397 0 0 0 1.12-2.021ZM11.26 7.99H4.395L3.068 3.196h9.477L11.26 7.991Zm-6.465 6.392a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Zm6.393 0a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Z" fill="#FFF"/></svg>
-          Add to Cart
-        </button>
-      </div>
-    </div>
+    </main>
 
-  </div>
-
-  <!--Attribution-->
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">robin</a>.
-  </div>
-  
-</body>
-
+    <!--Attribution-->
+    <!-- <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">robin</a>.
+    </div> -->
+  </body>
 </html>
