product preview complete, readme updated

--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- displays site properly based on user's device -->
 
     <link
@@ -33,10 +33,10 @@
       <!--Image Div-->
       <picture class="image">
         <source
-          media="(max-width: 600px)"
-          srcset="./images/image-product-mobile.jpg"
+          media="(min-width: 600px)"
+          srcset="./images/image-product-desktop.jpg"
         />
-        <img src="./images/image-product-desktop.jpg" alt="image-product" />
+        <img src="./images/image-product-mobile.jpg" alt="image-product" />
       </picture>
       <!--Text Div-->
       <div class="text">
