initial layout for results summary

--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -19,7 +19,7 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <div class="container">
+    <main class="container">
       <div class="qr-code">
         <img class="image" src="./images/image-qr-code.png" alt="qr code" />
       </div>
@@ -32,6 +32,6 @@
           to the next level
         </p>
       </div>
-    </div>
+    </main>
   </body>
 </html>
