--- a/results-summary-component-main/index.html
+++ b/results-summary-component-main/index.html
@@ -35,7 +35,7 @@
         <h3 class="heading">Summary</h3>
         <div class="stats-container">
           <div class="stats">
-            <h4 class="stat">
+            <div class="stat">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="20"
@@ -51,12 +51,12 @@
                   d="M10.833 8.333V2.5l-6.666 9.167h5V17.5l6.666-9.167h-5Z"
                 />
               </svg>
-              Reaction
-            </h4>
+              <h4>Reaction</h4>
+            </div>
             <p class="numbers">80 / 100</p>
           </div>
           <div class="stats">
-            <h4 class="stat">
+            <div class="stat">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="20"
@@ -86,12 +86,12 @@
                   d="M16.447 13.004a3.334 3.334 0 0 0 .728-5.53m-.025-.067a2.083 2.083 0 0 0-2.983-2.824M10 3.75a2.085 2.085 0 0 1 2.538-2.033 2.084 2.084 0 0 1 1.43 2.92m-.635 12.03a1.667 1.667 0 0 1-3.333 0"
                 />
               </svg>
-              Memory
-            </h4>
+              <h4>Memory</h4>
+            </div>
             <p class="numbers">92 / 100</p>
           </div>
           <div class="stats">
-            <h4 class="stat">
+            <div class="stat">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="20"
@@ -107,12 +107,12 @@
                   d="M7.5 10h5M10 18.333A8.333 8.333 0 1 0 1.667 10c0 1.518.406 2.942 1.115 4.167l-.699 3.75 3.75-.699A8.295 8.295 0 0 0 10 18.333Z"
                 />
               </svg>
-              Verbal
-            </h4>
+              <h4>Verbal</h4>
+            </div>
             <p class="numbers">61 / 100</p>
           </div>
           <div class="stats">
-            <h4 class="stat">
+            <div class="stat">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="20"
@@ -135,8 +135,8 @@
                   d="M17.5 10c-1.574 2.492-4.402 5-7.5 5s-5.926-2.508-7.5-5C4.416 7.632 6.66 5 10 5s5.584 2.632 7.5 5Z"
                 />
               </svg>
-              Visual
-            </h4>
+              <h4>Visual</h4>
+            </div>
             <p class="numbers">72 / 100</p>
           </div>
         </div>
