--- a/results-summary-component-main/index.html
+++ b/results-summary-component-main/index.html
@@ -22,7 +22,7 @@
         <h3 class="title">Your Result</h3>
         <div class="scores">
           <h1 class="score">76</h1>
-          <p class="total">76 of 100</p>
+          <p class="total">of 100</p>
         </div>
         <div class="text">
           <h4 class="title">Great</h4>
